# ai-garage

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  mcp.mjs  package.json  server.mjs  services.example.json
.github/workflows/: build-desktop.yml
desktop/: build-sidecar.mjs  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: HANDOFF.md  SPEC-live-view.md
public/: index.html  qrcode.min.js
